--- a/themes/matery/layout/_partial/bg-cover-content.ejs
+++ b/themes/matery/layout/_partial/bg-cover-content.ejs
@@ -16,7 +16,10 @@
                 <script>
                     var typed = new Typed("#subtitle", {
                         strings: ['<%= theme.subtitle.sub1 %>',
-                          '<%= theme.subtitle.sub2 %>'],
+                          '<%= theme.subtitle.sub2 %>''<%= theme.subtitle.sub3 %>',
+                          '<%= theme.subtitle.sub4 %>',
+                          '<%= theme.subtitle.sub5 %>',
+                          '<%= theme.subtitle.sub6 %>']],
                         startDelay: <%= theme.subtitle.startDelay %>,
                         typeSpeed: <%= theme.subtitle.typeSpeed %>,
                         loop: <%= theme.subtitle.loop %>,
